--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,6 @@
 # Sample localization file for English. Add more files in this directory for other locales.
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
-en:
-  register_success: "{{target}} was successfully registered."
-  objective: "objective"
+ja:
+  register_success: "{{target}}の登録に成功しました"
+  objective: "目標"
